SQL refactor of vacancy summaries. Removed a few erroneous views and added MVCBuildViews to the RAA project.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Candidate/Candidate.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Candidate/Candidate.cshtml
@@ -1,5 +1,6 @@
 ﻿@using System.Web.Mvc.Html
 @using SFA.Apprenticeships.Domain.Entities.Raa.Vacancies
+@using SFA.Apprenticeships.Domain.Raa.Interfaces.Repositories.Models
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Application
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Candidate
