--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/Index.cshtml
@@ -7,5 +7,5 @@
 
 <ul>
     <li><a href="@Url.RouteUrl(RecruitmentRouteNames.AdminChangeUkprn)">Change UKPRN</a></li>
-    <li><a href="@Url.RouteUrl(RecruitmentRouteNames.ResetUkprn)">Reset UKPRN</a></li>
+    <li><a href="@Url.RouteUrl(RecruitmentRouteNames.AdminResetUkprn)">Reset UKPRN</a></li>
 </ul>
