ra-316: renaming application status - viewed to in progress

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/ShareApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/ShareApplications.cshtml
@@ -40,9 +40,9 @@
                     </li>
                     <li>
                         <figure class="data">
-                            <p class="count">@Model.ViewedApplicationsCount</p>
+                            <p class="count">@Model.InProgressApplicationsCount</p>
                             <figcaption>
-                                <h2>Viewed</h2></figcaption>
+                                <h2>In progress</h2></figcaption>
                         </figure>
                     </li>
 
