--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Application/VacancyApplications.cshtml
@@ -145,7 +145,7 @@
                             <figure class="data">
                                 <p class="count">@Model.InProgressApplicationsCount</p>
                                 <figcaption>
-                                    <h2>Viewed</h2></figcaption>
+                                    <h2>In progress</h2></figcaption>
                             </figure>
                         }
                         else
