--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
@@ -84,7 +84,7 @@
                     <div class="form-group">
                         <p class="med-btm-margin">
                             <button type="submit" class="button-link" name="Review" value="ReviewRevertToViewed">
-                                Revert this candidate's application back to viewed
+                                Revert this candidate's application back to In progress
                             </button>
                         </p>
                     </div>
