--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_applicationStatus.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Shared/_applicationStatus.cshtml
@@ -7,7 +7,7 @@
         <span class="tag-newapplication">New application</span>
         break;
     case ApplicationStatuses.InProgress:
-        <span class="tag-inprogress">Viewed</span>
+        <span class="tag-inprogress">In progress</span>
         break;
     case ApplicationStatuses.Successful:
         <span class="tag-success">Successful</span>
