ra-316: rename from viewed to in progress (contd)

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmRevertToInProgress.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/ConfirmRevertToInProgress.cshtml
@@ -21,7 +21,7 @@
         <p>Be aware that the candidate will already have recieved a successful or unsuccessful message for this role.</p>
         <section>
             <div class="form-group">
-                <button type="submit" class="button" name="RevertToViewed" value="RevertToViewed">
+                <button type="submit" class="button" name="RevertToInProgress" value="RevertToInProgress">
                     Revert
                 </button>
                 <p class="med-btm-margin">
