--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
@@ -83,7 +83,7 @@
                 {
                     <div class="form-group">
                         <p class="med-btm-margin">
-                            <button type="submit" class="button-link" name="Review" value="ReviewRevertToViewed">
+                            <button type="submit" class="button-link" name="Review" value="ReviewRevertToInProgress">
                                 Revert this candidate's application back to In progress
                             </button>
                         </p>
