--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -22,7 +22,7 @@
 {
     <meta name="DCS.dcsaut" content="@User.Identity.Name" />
     <meta name="DCSext.sfaukprn" content="@User.GetUkprn()" />
-    <meta name="DCSext.sfaukprname" content="@Model.ProviderViewModel.ProviderName"/>
+    <meta name="DCSext.sfaukprname" content="@Model.ProviderViewModel.FullName"/>
     <meta name="WT.sp" content="@ViewBag.Title" />
 }
 
@@ -48,7 +48,7 @@
         <div class="grid grid-1-2">
             <h1 class="heading-xlarge">
                 Recruitment home
-                <span class="heading-secondary">@Model.ProviderViewModel.ProviderName</span>
+                <span class="heading-secondary">@Model.ProviderViewModel.FullName</span>
             </h1>
         </div>
         <div class="grid grid-1-2">
