--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_TrainingProvider.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_TrainingProvider.cshtml
@@ -58,7 +58,7 @@
         <div class="grid grid-1-3">
             <div class="text">
                 <h3 class="bold-small">Training provider</h3>
-                <p id="vacancy-provider-name">@Model.Provider.ProviderName</p>
+                <p id="vacancy-provider-name">@Model.Provider.TradingName</p>
             </div>
 
             <div class="text @editableItemClass">
