Testing add provider

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Providers.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Providers.cshtml
@@ -7,7 +7,7 @@
 <h1 id="heading" class="heading-xlarge">Providers</h1>
 
 <p>
-    @Html.RouteLink("Add Provider", ManagementRouteNames.AdminAddProvider)
+    @Html.RouteLink("New Provider", ManagementRouteNames.AdminCreateProvider)
 </p>
 
 @using (Html.BeginRouteForm(ManagementRouteNames.AdminProviders))
