--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/CreateProvider.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/CreateProvider.cshtml
@@ -4,9 +4,9 @@
     ViewBag.Title = "Providers";
 }
 
-<h1 id="heading" class="heading-xlarge">Add Provider</h1>
+<h1 id="heading" class="heading-xlarge">New Provider</h1>
 
-@using (Html.BeginRouteForm(ManagementRouteNames.AdminAddProvider))
+@using (Html.BeginRouteForm(ManagementRouteNames.AdminCreateProvider))
 {
     @Html.AntiForgeryToken()
     @Html.Partial("ValidationSummary", ViewData.ModelState)
@@ -18,7 +18,7 @@
         @Html.FormTextFor(m => m.TradingName, controlHtmlAttributes: new { type = "text" })
 
         <div class="form-group">
-            <button id="add-provider-button" type="submit" class="button" name="AddProviderAction" value="AddProvider">Add Provider</button>
+            <button id="add-provider-button" type="submit" class="button" name="CreateProviderAction" value="CreateProvider">Add Provider</button>
         </div>
     </div>
 }
