Return full name and trading name for provider sites

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Provider.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Provider.cshtml
@@ -37,9 +37,9 @@
                 @foreach (var providerSite in Model.ProviderSiteViewModels)
                 {
                     <tr>
-                        <td>@providerSite.Name</td>
-                        <td>@providerSite.DisplayName</td>
-                        <td></td>
+                        <td>@providerSite.EdsUrn</td>
+                        <td>@providerSite.FullName</td>
+                        <td>@providerSite.TradingName</td>
                         <td></td>
                     </tr>
                 }
