--- a/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_VacancyDetails.cshtml
+++ b/src/SFA.Apprenticeships.Web.Raa.Common/Views/Shared/DisplayTemplates/Vacancy/_VacancyDetails.cshtml
@@ -29,7 +29,7 @@
             {
                 <div>
                     <h3 class="bold-small">Training provider</h3>
-                    <p id="vacancy-provider-name">@Model.ProviderSite.Name</p>
+                    <p id="vacancy-provider-name">@Model.ProviderSite.TradingName</p>
                 </div>
 
                 <div class="@editableItemClass">
