--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SubmitVacancy.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/SubmitVacancy.cshtml
@@ -143,7 +143,7 @@
             </div>
             <div class="grid grid-1-3">
                 <h3 class="bold-small">Training provider</h3>
-                <p>@Model.ProviderSite.Name</p>
+                <p>@Model.ProviderSite.TradingName</p>
                 <div class="edit-wrapper">
                     <h3 class="heading-small">
                         Contact <a href="#" class="heading-edit edit-link font-xsmall">Edit</a>
