--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Provider.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Provider.cshtml
@@ -26,24 +26,28 @@
                 <col class="t10">
             </colgroup>
             <thead>
-                <tr>
-                    <th>EDSURN</th>
-                    <th>Full Name</th>
-                    <th>Trading Name</th>
-                    <th></th>
-                </tr>
+            <tr>
+                <th>EDSURN</th>
+                <th>Full Name</th>
+                <th>Trading Name</th>
+                <th></th>
+            </tr>
             </thead>
             <tbody>
-                @foreach (var providerSite in Model.ProviderSiteViewModels)
-                {
-                    <tr>
-                        <td>@providerSite.EdsUrn</td>
-                        <td>@providerSite.FullName</td>
-                        <td>@providerSite.TradingName</td>
-                        <td></td>
-                    </tr>
-                }
+            @foreach (var providerSite in Model.ProviderSiteViewModels)
+            {
+                <tr>
+                    <td>@providerSite.EdsUrn</td>
+                    <td>@providerSite.FullName</td>
+                    <td>@providerSite.TradingName</td>
+                    <td></td>
+                </tr>
+            }
             </tbody>
         </table>
     </div>
 </div>
+
+<p>
+    @Html.RouteLink("New Provider Site", ManagementRouteNames.AdminCreateProviderSite)
+</p>
