--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Index.cshtml
@@ -6,5 +6,5 @@
 <h1 id="heading" class="heading-xlarge">Administrator functions</h1>
 
 <ul>
-    <li><a href="@Url.RouteUrl(ManagementRouteNames.AdminProviders)">Manage Providers</a></li>
+    <li>@Html.RouteLink("Manage Providers", ManagementRouteNames.AdminProviders)</li>
 </ul>
