--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Provider.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Provider.cshtml
@@ -20,16 +20,18 @@
     <div class="grid grid-1-1">
         <table>
             <colgroup>
-                <col class="t30">
-                <col class="t30">
-                <col class="t30">
-                <col class="t10">
+                <col>
+                <col>
+                <col>
+                <col>
+                <col>
             </colgroup>
             <thead>
             <tr>
                 <th>EDSURN</th>
                 <th>Full Name</th>
                 <th>Trading Name</th>
+                <th>Relationship Type</th>
                 <th></th>
             </tr>
             </thead>
@@ -40,6 +42,15 @@
                     <td>@providerSite.EdsUrn</td>
                     <td>@providerSite.FullName</td>
                     <td>@providerSite.TradingName</td>
+                    <td>
+                        @{
+                            var providerSiteRelationship = providerSite.ProviderSiteRelationships.SingleOrDefault(psr => psr.ProviderId == Model.ProviderId);
+                        }
+                        @if (providerSiteRelationship != null)
+                        {
+                            @providerSiteRelationship.ProviderSiteRelationshipType
+                        }
+                    </td>
                     <td></td>
                 </tr>
             }
