RA-330: Display provider status

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Provider.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Provider.cshtml
@@ -6,11 +6,14 @@
 
 <h1 id="heading" class="heading-xlarge">Provider</h1>
 
+<p>@Html.RouteLink("Manage Providers", ManagementRouteNames.AdminProviders)</p>
+
 <p>
     <ul>
         <li>UKPRN: @Model.Ukprn</li>
         <li>Full name: @Model.FullName</li>
         <li>Trading Name: @Model.TradingName</li>
+        <li>Status: @Model.ProviderStatusType</li>
     </ul>
 </p>
 
