ra-316: content changes

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ApprenticeshipApplication/Review.cshtml
@@ -19,6 +19,8 @@
     @Html.HiddenFor(m => m.ApplicationSelection.FilterType)
     @Html.HiddenFor(m => m.ApplicationSelection.PageSize)
 
+    var currentStatus = "&nbsp;(current status)";
+
     if (Model.Status == ApplicationStatuses.Successful || Model.Status == ApplicationStatuses.Unsuccessful)
     {
         var decision = Model.Status == ApplicationStatuses.Successful ? "successful" : "unsuccessful";
@@ -99,24 +101,33 @@
             <section>
                 <div class="form-group">
                     <div class="detail-content qa-comment">
+                        <h2 class="heading-large">Decision log</h2>
+                        <p class="heading-medium">Notes (optional)</p>
                         <div class="blocklabel-single-container">
                             @Html.FormTextAreaFor(m => m.Notes, controlHtmlAttributes: new {@class = "width-all-1-1 form-textarea-medium", type = "text"})
                         </div>
+                        <p class="heading-medium">How would you like to assign this candidate's application?</p>
                         <p>
                             <label for="application-status-submitted" class="block-label">
-                                @Html.RadioButtonFor(model => model.Status, ApplicationStatuses.Submitted, new {id = "application-status-submitted"}) Submitted
+                                @Html.RadioButtonFor(model => model.Status, ApplicationStatuses.Submitted, new {id = "application-status-submitted"}) New @if (Model.Status == ApplicationStatuses.Submitted)
+                                                                                                                                                                      {
+                                                                                                                                                                          @Html.Raw(currentStatus)
+                                                                                                                                                                      }
                             </label>
                             <br/>
                             <label for="application-status-inprogress" class="block-label">
-                                @Html.RadioButtonFor(model => model.Status, ApplicationStatuses.InProgress, new {id = "application-status-inprogress"}) In progress
+                                @Html.RadioButtonFor(model => model.Status, ApplicationStatuses.InProgress, new {id = "application-status-inprogress"}) In progress @if (Model.Status == ApplicationStatuses.InProgress)
+                                                                                                                                                                    {
+                                                                                                                                                                        @Html.Raw(currentStatus)
+                                                                                                                                                                    }
                             </label>
                             <br/>
                             <label for="application-status-unsuccessful" class="block-label">
                                 @Html.RadioButtonFor(model => model.Status, ApplicationStatuses.Unsuccessful, new {id = "application-status-unsuccessful"}) Unsuccessful
                             </label>
-                            <br />
+                            <br/>
                             <label for="application-status-successful" class="block-label">
-                                @Html.RadioButtonFor(model => model.Status, ApplicationStatuses.Successful, new { id = "application-status-successful" }) Successful
+                                @Html.RadioButtonFor(model => model.Status, ApplicationStatuses.Successful, new {id = "application-status-successful"}) Successful
                             </label>
                         </p>
                         <p>
