RA-332: Search and view provider sites

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Index.cshtml
@@ -7,4 +7,5 @@
 
 <ul>
     <li>@Html.RouteLink("Manage Providers", ManagementRouteNames.AdminProviders)</li>
+    <li>@Html.RouteLink("Manage Provider Sites", ManagementRouteNames.AdminProviderSites)</li>
 </ul>
