--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/Index.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/Index.cshtml
@@ -8,4 +8,5 @@
 <ul>
     <li><a href="@Url.RouteUrl(RecruitmentRouteNames.AdminChangeUkprn)">Change UKPRN</a></li>
     <li><a href="@Url.RouteUrl(RecruitmentRouteNames.AdminResetUkprn)">Reset UKPRN</a></li>
+    <li><a href="@Url.RouteUrl(RecruitmentRouteNames.TransferVacancies)">Transfer Vacancies</a></li>
 </ul>
