RA-332 - Update provider site relationship types

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ProviderSite.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/ProviderSite.cshtml
@@ -1,58 +1,83 @@
-﻿@using SFA.Apprenticeships.Web.Manage.Constants
+﻿@using SFA.Apprenticeships.Domain.Entities.Raa.Parties
+@using SFA.Apprenticeships.Web.Manage.Constants
 @model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Provider.ProviderSiteViewModel
 @{
     ViewBag.Title = "Providers";
 }
 
-<h1 id="heading" class="heading-xlarge">Provider</h1>
+<h1 id="heading" class="heading-xlarge">Provider Site</h1>
 
 <p>@Html.RouteLink("Manage Provider Sites", ManagementRouteNames.AdminProviderSites)</p>
 
-<p>
-    <ul>
-        <li>EDSURN: @Model.EdsUrn</li>
-        <li>Full name: @Model.FullName</li>
-        <li>Trading Name: @Model.TradingName</li>
-    </ul>
-</p>
+@using (Html.BeginRouteForm(ManagementRouteNames.AdminEditProviderSite))
+{
+    @Html.HiddenFor(m => m.ProviderSiteId);
 
-<h2 class="heading-medium">Provider Site Relationships</h2>
+    <p>
+        <ul>
+            <li>EDSURN: @Model.EdsUrn</li>
+            <li>Full name: @Model.FullName</li>
+            <li>Trading Name: @Model.TradingName</li>
+        </ul>
+    </p>
 
-<div class="grid-wrapper">
-    <div class="grid grid-1-1">
-        <table>
-            <colgroup>
-                <col>
-                <col>
-                <col>
-                <col>
-                <col>
-            </colgroup>
-            <thead>
-            <tr>
-                <th>Provider UKPRN</th>
-                <th>Provider Full Name</th>
-                <th>Provider Trading Name</th>
-                <th>Relationship Type</th>
-                <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            @foreach (var providerSiteRelationship in Model.ProviderSiteRelationships)
-            {
+    <h2 class="heading-medium">Provider Site Relationships</h2>
+
+    <div class="grid-wrapper">
+        <div class="grid grid-1-1">
+            <table>
+                <colgroup>
+                    <col>
+                    <col>
+                    <col>
+                    <col>
+                    <col>
+                </colgroup>
+                <thead>
                 <tr>
-                    <td>@Html.RouteLink(providerSiteRelationship.ProviderUkprn, ManagementRouteNames.AdminViewProvider, new {providerSiteRelationship.ProviderId})</td>
-                    <td>@providerSiteRelationship.ProviderFullName</td>
-                    <td>@providerSiteRelationship.ProviderTradingName</td>
-                    <td>@providerSiteRelationship.ProviderSiteRelationshipType</td>
-                    <td></td>
+                    <th>Provider UKPRN</th>
+                    <th>Provider Full Name</th>
+                    <th>Provider Trading Name</th>
+                    <th>Relationship Type</th>
+                    <th></th>
                 </tr>
-            }
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                @for (int i=0; i<Model.ProviderSiteRelationships.Count; i++)
+                {
+                    var providerSiteRelationship = Model.ProviderSiteRelationships[i];
+                    <tr>
+                        <td>@Html.RouteLink(providerSiteRelationship.ProviderUkprn, ManagementRouteNames.AdminViewProvider, new {providerSiteRelationship.ProviderId})</td>
+                        <td>@providerSiteRelationship.ProviderFullName</td>
+                        <td>@providerSiteRelationship.ProviderTradingName</td>
+                        <td>
+                            @Html.Hidden("ProviderSiteRelationships[" + i + "].ProviderSiteRelationshipId", providerSiteRelationship.ProviderSiteRelationshipId)
+                            @Html.DropDownList("ProviderSiteRelationships[" + i + "].ProviderSiteRelationshipType", EnumHelper.GetSelectList(typeof(ProviderSiteRelationshipTypes), providerSiteRelationship.ProviderSiteRelationshipType))
+                        </td>
+                        <td></td>
+                    </tr>
+                }
+                </tbody>
+            </table>
+        </div>
     </div>
-</div>
 
-<p>
-    @Html.RouteLink("New Provider Site", ManagementRouteNames.AdminCreateProviderSite, new {Model.ProviderId})
-</p>
+    <div class="form-group">
+        <button id="save-provider-site-button" type="submit" class="button" name="SaveProviderSiteAction" value="SaveProviderSite">Save</button>
+    </div>
+
+    <h2 class="heading-medium">Add Provider Site Relationship</h2>
+
+    <div class="form-group">
+
+        @Html.FormTextFor(m => m.ProviderUkprn, controlHtmlAttributes: new { type = "tel", size = 8 })
+        <div class="form-group">
+            @Html.LabelFor(m => m.ProviderSiteRelationshipType, new {@class = "form-label"})
+            @Html.DropDownListFor(m => m.ProviderSiteRelationshipType, EnumHelper.GetSelectList(typeof(ProviderSiteRelationshipTypes)))
+        </div>
+
+        <div class="form-group">
+            <button id="add-provider-site-relationship-button" type="submit" class="button" name="CreateProviderSiteRelationshipAction" value="CreateProviderSiteRelationship">Add</button>
+        </div>
+    </div>
+}
