--- a/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardVacancySummaries.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/AgencyUser/_DashboardVacancySummaries.cshtml
@@ -1,4 +1,5 @@
-﻿@using SFA.Apprenticeships.Web.Manage.Constants
+﻿@using SFA.Apprenticeships.Domain.Raa.Interfaces.Repositories.Models
+@using SFA.Apprenticeships.Web.Manage.Constants
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels
 @using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 @model DashboardVacancySummariesViewModel
