ra-339: validate vacancynumbers.

--- a/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/TransferVacancies.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/Admin/TransferVacancies.cshtml
@@ -9,6 +9,7 @@
 
 @using (Html.BeginRouteForm(RecruitmentRouteNames.TransferVacancies))
 {
+    @Html.Partial("ValidationSummary", ViewData.ModelState)
     <div class="form-group">
         <fieldset class="form-group inline-fixed">
             @Html.FormTextFor(m => m.VacancyReferenceNumbers,
