--- a/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Provider.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Admin/Provider.cshtml
@@ -42,7 +42,7 @@
             @foreach (var providerSite in Model.ProviderSiteViewModels)
             {
                 <tr>
-                    <td>@providerSite.EdsUrn</td>
+                    <td>@Html.RouteLink(providerSite.EdsUrn, ManagementRouteNames.AdminViewProviderSite, new { providerSite.ProviderSiteId })</td>
                     <td>@providerSite.FullName</td>
                     <td>@providerSite.TradingName</td>
                     <td>
